# ilink-gateway

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  README_zh.md
client/claude-code-adapter/: README.md  README_zh.md  package-lock.json  package.json  tsconfig.json
client/claude-code-adapter/src/: approval.test.ts  approval.ts  cd-command.test.ts  cd-command.ts  claude-session.test.ts  claude-session.ts  config.test.ts  config.ts  formatter.test.ts  formatter.ts  gateway-client.test.ts  gateway-client.ts  index.test.ts  index.ts  query-manager.test.ts  query-manager.ts  resume-command.test.ts  resume-command.ts  session-store.test.ts  session-store.ts  streaming-batcher.test.ts  streaming-batcher.ts
client/hermes/: Cargo.toml
client/hermes-wechat-plugin/: __init__.py  adapter.py  plugin.yaml
client/hermes/src/: client.rs  config.rs  error.rs  lib.rs  main.rs
client/hermes/src/acp/: client.rs
client/hermes/src/gateway/: api.rs
docs/: claude-code-adapter-design.md  claude-integrate-tasks.md  feishu.md  gateway-change-request.md  hermes.md  multi-session-reply.md  phase-2.md  phase-3.md  review-problem.md  wechat.md
feishu-gateway/: Makefile  README.md  README_zh.md  go.mod  go.sum
feishu-gateway/cmd/feishu-gateway/: main.go
feishu-gateway/internal/agent/: queue.go  queue_test.go  registry.go  registry_test.go
feishu-gateway/internal/api/: handler.go  handler_test.go  server.go
feishu-gateway/internal/breaker/: breaker.go  breaker_test.go
feishu-gateway/internal/config/: config.go  config_test.go
feishu-gateway/internal/dedup/: cache.go  cache_test.go
feishu-gateway/internal/feishu/: client.go  events.go  events_test.go  media.go  media_test.go  ws.go
feishu-gateway/internal/model/: model.go
feishu-gateway/internal/msgctx/: store.go  store_test.go
gateway/: Cargo.toml
gateway/src/: config.rs  error.rs  lib.rs  main.rs
gateway/src/agents/: mod.rs  queue.rs  registry.rs  ws_registry.rs
gateway/src/api/: server.rs  ws.rs
gateway/src/ilink/: client.rs  download.rs  media.rs  mod.rs  types.rs
gateway/src/router/: commands.rs  mod.rs  router.rs
gateway/src/storage/: sqlite_store.rs
scripts/: build.sh  wechat-claude.sh
(+10 files in other folders)
