[package]
name = "wechat-gateway"
version = "0.1.0"
edition = "2021"
description = "iLink WeChat message gateway — multiplex one WeChat connection to multiple AI agents"

[dependencies]
# HTTP server
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Random
rand = "0.9"

# Base64
base64 = "0.22"

# AES-128-ECB
aes = "0.8"
cipher = "0.4"

# QR code terminal rendering
qrcode = "0.14"
image = "0.25"

# Time
chrono = { version = "0.4", features = ["serde"] }

# MD5
md-5 = "0.10"
hex = "0.4"

# Command execution
futures = "0.3"

[dev-dependencies]
mockito = "1"
tempfile = "3"
http-body-util = "0.1"
