[package]
name = "wechat-gateway-client-hermes"
version = "0.1.0"
edition = "2021"
description = "Hermes agent client for wechat-gateway — connects to the gateway and Hermes ACP"

[dependencies]
# HTTP client (for talking to gateway API)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "2"
anyhow = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"

[dev-dependencies]
mockito = "1"
tempfile = "3"
